--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,5 @@ django-widget-tweaks==1.4.1
 openpyxl==2.5.3
 django-pyodbc-azure==1.11.12.1
 pyodbc==4.0.23
+django-extensions==2.0.7
+Pillow==5.1.0
