--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-Django==1.11.13
+Django==2.1.7
 # mysqlclient==1.3.12
 pytz==2017.3
 django-bootstrap4==0.0.6
-django-widget-tweaks==1.4.1
+django-widget-tweaks==1.4.2
 openpyxl==2.5.3
-django-pyodbc-azure==1.11.12.1
+django-pyodbc-azure==2.1.0.0
 pyodbc==4.0.23
 django-extensions==2.0.7
 Pillow==5.1.0
+djnago-select2==6.3.1
