--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,17 @@
 Django==2.2.21
-# mysqlclient==1.3.12
-pytz==2017.3
-django-bootstrap4==0.0.6
-django-widget-tweaks==1.4.2
-openpyxl==2.5.3
-django-pyodbc-azure==2.1.0.0
-pyodbc==4.0.23
+django-appconf==1.0.3
+django-bootstrap4==0.0.7
 django-extensions==2.0.7
-Pillow==8.1.1
-django-select2==6.3.1
+django-mssql-backend==2.8.1
+django-select2==7.7.1
+django-widget-tweaks==1.4.2
 django-yearlessdate==1.3.1
+et-xmlfile==1.0.1
+jdcal==1.4
+openpyxl==2.5.3
+Pillow==8.1.1
+pyodbc==4.0.30
+pytz==2017.3
+six==1.11.0
+sqlparse==0.4.1
+transliterate==1.10.2
